[tool.poetry]
name = "leek-llm"
version = "0.1.0"
description = ""
authors = ["byt3bl33d3r <byt3bl33d3r@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
httpx = "^0.27.0"
pyautogen = "^0.2.26"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pydantic-xml = "^2.9.2"
typer = "^0.12.3"
markdownify = "^0.12.1"

[tool.poetry.scripts]
leek-llm = 'leek_llm.__main__:app'

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
datamodel-code-generator = "^0.25.6"
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
